Adicionado suporte ao JPA, MySQL e H2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# MySQL
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente?useTimezone=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=tiago
+spring.datasource.password=Tchampion1$
 
+# exibe os comando SQL
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=true
+
+server.servlet.context-path=/ponto-inteligente
